--- a/css/main.css
+++ b/css/main.css
@@ -101,8 +101,29 @@ textarea {
 
 .cover .navbar {
     position: fixed;
-    background-color: rgba(255,255,255, 0.5) !important;
+    background-color: rgba(255,255,255, 0.8) !important;
     z-index: 2;
+    -webkit-box-shadow: 0px 0px 8px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 8px -2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 8px -2px rgba(0,0,0,0.75);
+}
+
+.cover .navbar .navbar-brand {
+    padding-top: 8px;
+}
+
+.cover .navbar .front-dev {
+    font-size: 12px;
+    line-height: 17px;
+    color: #ccc;
+}
+
+footer .section {
+    background-color: #bdc3c7;
+}
+
+footer .section p {
+    margin: 0;
 }
 
 /* ==========================================================================
