--- a/css/main.css
+++ b/css/main.css
@@ -94,18 +94,63 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/* @import url('https://fonts.googleapis.com/css?family=Raleway'); */
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700,800');
+
+body {
+    font-family: 'Raleway', sans-serif !important;
+}
 
 .section {
     background-color: #fff;
 }
 
+.section__hr {
+    width: 30px;
+    height: 3px;
+    background-color: #3498db;
+    margin: 0 auto 20px;
+    border: none;
+}
+
+.section__text-primary {
+    margin-top: 0;
+}
+
+.section__subtitle {
+    margin-bottom: 50px;
+}
+
+.section-about {
+    background-color: #f0f0f0;
+    border-top: 1px solid #dddddd;
+    border-bottom: 1px solid #dddddd;
+}
+
+.cover {
+    color: #000;
+    min-height: auto;
+    margin-top: 70px;
+    padding: 50px 0;
+}
+
+.cover__text {
+    font-size: 16px !important;
+    margin-top: 40px;
+}
+
+.cover h1 {
+    color: #000;
+}
+
 .cover .navbar {
     position: fixed;
-    background-color: rgba(255,255,255, 0.8) !important;
+    background-color: #34495e !important;
     z-index: 2;
     -webkit-box-shadow: 0px 0px 8px -2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 8px -2px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 8px -2px rgba(0,0,0,0.75);
+    min-height: 70px;
 }
 
 .cover .navbar .navbar-brand {
@@ -116,6 +161,25 @@ textarea {
     font-size: 12px;
     line-height: 17px;
     color: #ccc;
+}
+
+.social-links {
+    list-style: none;
+    padding: 10px 0 0 15px;
+}
+
+.social-links__box {
+    display: inline-block;
+}
+
+.social-links__icon {
+    font-size: 30px;
+    color: #949faa;
+    margin: 3px;
+}
+
+.social-links__box:fisrt-child .social-links__icon {
+    margin-left: 0;
 }
 
 footer .section {
